--- a/client/css/colors.scss
+++ b/client/css/colors.scss
@@ -5,6 +5,11 @@ $light: #1fb380;
 $lighter: #55d5a9;
 $lightest: #86e0c2;
 
+/* Magic from http://design.vitalsource.com/ */
+$accent: #425ba1;
+$accentDark: #24386e;
+$accentLight: #D2D9ED;
+
 /* Greys */
 $cloud1  : #FAFAFA;
 $cloud2  : #F6F6F6;
