--- a/client/css/styles.scss
+++ b/client/css/styles.scss
@@ -1,5 +1,15 @@
+/* General imports */
 @import 'normalize';
 @import 'colors';
+@import 'loaders';
+
+/* Each primary page has specific imports */
+@import 'welcome';
+@import 'explore';
+@import 'discovery';
+@import 'glossary';
+@import 'dataset';
+@import 'my-account';
 
 /* Global styles */
 html, body {
@@ -27,251 +37,6 @@ body {
 *, *:before, *:after {
   box-sizing: inherit;
 }
-
-/* Rolling loader styles */
-
-@-webkit-keyframes uil-rolling-anim {
-  0% {
-    -ms-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  50% {
-    -ms-transform: rotate(180deg);
-    -moz-transform: rotate(180deg);
-    -webkit-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-    transform: rotate(180deg);
-  }
-  100% {
-    -ms-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-@-webkit-keyframes uil-rolling-anim {
-  0% {
-    -ms-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  50% {
-    -ms-transform: rotate(180deg);
-    -moz-transform: rotate(180deg);
-    -webkit-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-    transform: rotate(180deg);
-  }
-  100% {
-    -ms-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-@-moz-keyframes uil-rolling-anim {
-  0% {
-    -ms-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  50% {
-    -ms-transform: rotate(180deg);
-    -moz-transform: rotate(180deg);
-    -webkit-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-    transform: rotate(180deg);
-  }
-  100% {
-    -ms-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-@-ms-keyframes uil-rolling-anim {
-  0% {
-    -ms-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  50% {
-    -ms-transform: rotate(180deg);
-    -moz-transform: rotate(180deg);
-    -webkit-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-    transform: rotate(180deg);
-  }
-  100% {
-    -ms-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-@-moz-keyframes uil-rolling-anim {
-  0% {
-    -ms-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  50% {
-    -ms-transform: rotate(180deg);
-    -moz-transform: rotate(180deg);
-    -webkit-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-    transform: rotate(180deg);
-  }
-  100% {
-    -ms-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-@-webkit-keyframes uil-rolling-anim {
-  0% {
-    -ms-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  50% {
-    -ms-transform: rotate(180deg);
-    -moz-transform: rotate(180deg);
-    -webkit-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-    transform: rotate(180deg);
-  }
-  100% {
-    -ms-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-@-o-keyframes uil-rolling-anim {
-  0% {
-    -ms-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  50% {
-    -ms-transform: rotate(180deg);
-    -moz-transform: rotate(180deg);
-    -webkit-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-    transform: rotate(180deg);
-  }
-  100% {
-    -ms-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes uil-rolling-anim {
-  0% {
-    -ms-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  50% {
-    -ms-transform: rotate(180deg);
-    -moz-transform: rotate(180deg);
-    -webkit-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-    transform: rotate(180deg);
-  }
-  100% {
-    -ms-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-.uil-rolling-css {
-  width: 200px;
-  height: 200px;
-}
-
-.uil-rolling-css>div {
-  width: 200px;
-  height: 200px;
-  position: relative;
-  -ms-animation: uil-rolling-anim 1.1s linear infinite;
-  -moz-animation: uil-rolling-anim 1.1s linear infinite;
-  -webkit-animation: uil-rolling-anim 1.1s linear infinite;
-  -o-animation: uil-rolling-anim 1.1s linear infinite;
-  animation: uil-rolling-anim 1.1s linear infinite;
-}
-
-.uil-rolling-css>div div {
-  position: absolute;
-  width: 200px;
-  height: 100px;
-  border-radius: 1000px 1000px 0 0;
-  border-color: $default;
-  border-style: solid;
-  border-width: 24px;
-  border-bottom-width: 0;
-}
-
-.uil-rolling-css>div div:nth-of-type(2) {
-  -ms-transform: translate(0, 50px) rotate(39.6deg) translate(0, -50px);
-  -moz-transform: translate(0, 50px) rotate(39.6deg) translate(0, -50px);
-  -webkit-transform: translate(0, 50px) rotate(39.6deg) translate(0, -50px);
-  -o-transform: translate(0, 50px) rotate(39.6deg) translate(0, -50px);
-  transform: translate(0, 50px) rotate(39.6deg) translate(0, -50px);
-}
-
-.loader-container {
-  width: 400px;
-  margin: 125px auto 0px;
-}
-
-.component-loader {
-  margin: 50px auto 0;
-  transform: scale(0.34);
-}
-
-.full-loader {
-  margin: 0px auto;
-  transform: scale(0.44);
-}
-
 
 /* Typography */
 
@@ -325,143 +90,7 @@ ul {
   padding: 0;
 }
 
-.logotype {
-  cursor: pointer;
-}
-
-.callout {
-  font-weight: 300;
-  position: absolute;
-  display: block;
-  right: 16px;
-  top: 28%;
-  font-size: 20px;
-  color:$cloud6;
-}
-
-.callout .active {
-  font-weight: 700;
-  color:$cloud9;
-}
-
-.download-info {
-  font-weight: 700;
-  font-size: 32px;
-  color: $cloud9;
-}
-
-.download-info-tag {
-  font-weight: 300;
-  color:$cloud6;
-}
-
-.download-button {
-  float:right;
-}
-
-.save-discovery-button-container {
-  margin: 0 auto;
-  position: relative;
-}
-
-.save-discovery-button {
-  width: 200px;
-  margin: 18px 0 18px -100px;
-  left: 50%;
-  position: relative;
-}
-
-.overview-layer {
-  margin: 18px;
-  padding: 18px;
-}
-
-.overview-content {
-  font-weight: 300;
-  position: relative;
-  display: block;
-  top: 28%;
-  font-size: 18px;
-  color:$cloud10;
-  margin: 26px 0 26px 0;
-  text-align: center;
-}
-
-.overview-content .active {
-  font-weight: 700;
-  font-size: 38px;
-  color: $light;
-}
-
-.overview-content-download {
-  font-weight: 700;
-  position: relative;
-  display: block;
-  top: 28%;
-  font-size: 38px;
-  color: $light;
-  margin: 62px 0 62px 0;
-  text-align: center;
-}
-
-.overview-content-user {
-  font-weight: 300;
-  position: relative;
-  display: block;
-  top: 28%;
-  font-size: 18px;
-  color:$cloud10;
-  text-align: center;
-  margin: 36px 0 0 0;
-  padding: 0 20px 0 20px;
-}
-
-.overview-content-user-inactive {
-  margin: 18px 0 36px 0;
-  text-align: center;
-}
-
-.overview-content-user-active {
-  text-align: center;
-  margin: -20px 0 0 0;
-}
-
-.user-photo {
-  float: left;
-}
-
-.user-active-message {
-  text-align: right;
-  padding: 18px 0 10px 0;
-}
-
-.overview-title {
-  font-size:18px;
-  font-weight: bold;
-  color: $cloud10;
-}
-
-.figure-hint-tooltip {
-  width: 200px;
-  white-space: normal;
-  text-align: left;
-}
-
-.figure-hint-label {
-  color: $cloud10;
-  font-size: 14px;
-  padding-left: 10px;
-}
-
-.figure-hint-container {
-  display: block;
-}
-
-.figure-hint-container-map {
-  margin: -18px 0 0 0;
-}
-
-/*Header styles*/
+/* Header styles (on all pages)*/
 
 .button-link {
   text-decoration: none;
@@ -479,280 +108,6 @@ ul {
 
 .header-logo {
   margin: 10px 0;
-}
-
-
-/* Github follow buttons */
-
-button.github, input[type=submit].github {
-  border: 0;
-  display: block;
-  margin-bottom: 2rem;
-  width: 100%;
-  color: $white;
-  padding: 2rem
-}
-
-button.github, input[type=submit].github {
-  background: #82d465
-}
-
-button.github:after, input[type=submit].github:after {
-  background: #5cc437
-}
-
-
-/* General layout */
-/* Explore layout */
-
-.header-explore-filteropen {
-  width: 1100px;
-  margin: 0 0 0 340px;
-}
-
-.header-explore {
-  width: 100%;
-  margin: 0 0 0 0;
-}
-
-.subscribe-explore-yes {
-  display: inline-block;
-  width: 45%;
-}
-
-.subscribe-explore-no {
-  display: inline-flex;
-  width: 45%;
-  margin-left: 24px;
-}
-
-.subscribe-explore-body {
-  text-align: center;
-}
-
-.explore-container {
-  width: 1212px;
-  margin: 10px 7.5%;
-}
-
-.explore-container-filteropen {
-  width: 1100px;
-  margin: 10px 10% 0 23%;
-}
-
-.explore-container-filterclosed {
-  width: 1100px;
-  margin: 10px 11% 0 11%;
-}
-
-.right {
-  float:right;
-}
-
-.left {
-  float:left;
-}
-
-/* 3 card grid, 348px per card, 18px per gutter between cards */
-.one {
-  width: 348px;
-}
-
-.overview-size {
-  width: 348px;
-  height: 250px;
-}
-
-.two {
-  width: 714px;
-}
-
-.three {
-  width: 1176px;
-  clear: both;
-}
-
-.four {
-  width: 670px;
-}
-
-.five {
-  width: 250px;
-}
-
-.six {
-  width: 348px;
-  height: 320px;
-}
-
-.card {
-  padding: 18px;
-}
-
-.explore-filters {
-  min-height:1000px;
-  margin: 0 0 18px 0;
-}
-
-.filter-field-with-help {
-  float: left;
-}
-
-.explore-headline {
-  margin: 0 0 18px 18px;
-  position: relative;
-}
-
-.explore-map {
-  margin: 0 0 18px 18px;
-  height: 656px;
-}
-
-.explore-map-contents {
-  position: absolute;
-  margin: 0 0 0 0;
-}
-
-.map-legend{
-  float: right;
-}
-
-.explore-map-render {
-  margin: 0 0 0 0;
-}
-
-.explore-histogram {
-  padding:3px;
-  height:400px;
-  margin: 0 0 18px 18px;
-}
-
-.explore-areachart {
-  padding:3px;
-  margin: 0 0 18px 18px;
-}
-
-.explore-wordcloud {
-  padding:3px;
-  overflow-y:scroll;
-  margin: 0 0 18px 18px;
-}
-
-.explore-radarchart {
-  padding:3px;
-  height:400px;
-  margin: 0 0 18px 18px;
-}
-
-.explore-download {
-  margin: 0 0 18px 0;
-  padding:16px;
-}
-
-.explore-table {
-  padding:0px;
-  margin: 0 0 18px 18px;
-}
-
-/* More Explore styles */
-
-.explore-filter {
-  margin: 12px 12px 0 12px;
-}
-
-.explore-filter-slider {
-  height: 6px;
-  margin-top: -6px;
-}
-
-.profile-container {
-  display:block;
-}
-
-.welcome-message {
-  font-size:16px;
-}
-
-.profile-image {
-  width: 150px;
-  height: 150px;
-  display: inline;
-}
-
-.profile-button {
-  position: relative;
-}
-
-.explore-map-container {
-  width: 742px;
-  margin: 0 auto;
-}
-
-.explore-map-heat-container {
-  width: 742px;
-  height: 371px;
-  background-image: url('/images/BWmapBackground.jpg');
-  background-size: cover;
-}
-
-
-.word-cloud-tag-wrapper {
-  border: 2px solid $cloud4;
-  border-radius: 2px;
-  background-color: $white;
-  display: inline-block;
-  padding: 6px;
-  margin: 3px;
-}
-
-.word-cloud-tag {
-  display:block;
-}
-
-.histogram-container {
-  width: 714px;
-  margin: 0 0 0 0;
-  height: 320px;
-  overflow:hidden;
-}
-
-.pie-container {
-  width: 360px;
-  margin: 0 0 0 0;
-  height: 320px;
-  overflow:hidden;
-}
-
-.area-container {
-  width: 348px;
-  height: 240px;
-}
-
-.radar-container {
-  width: 360px;
-  margin: 0 auto;
-  height: 320px;
-  overflow:hidden;
-}
-
-.area-container > svg > g > text > tspan {
-  fill: none !important;
-}
-
-.explore-select {
-  margin-left: 60px;
-  height: 50px;
-}
-
-.explore-pagination {
-  padding: 12px;
-  text-align: right;
-}
-
-.explore-pagination-count {
-  display: inline-block;
-  padding-left: 12px;
-  padding-right: 12px;
 }
 
 /* Discovery Details */
@@ -867,264 +222,6 @@ button.github:after, input[type=submit].github:after {
   color: $cloud4;
   font-family: 'Roboto', sans-serif;
   height: 50px;
-}
-
-/* My Account layout */
-
-.myacct-loggedout {
-  margin: 48px 20% 0 20%;
-  height: 300px;
-  padding: 50px 20px 50px 20px;
-}
-
-.myacct-loggedin {
-  margin: 48px auto;
-  margin-bottom: 15px;
-  width: 1176px;
-  height: 200px;
-}
-
-.myacct-user {
-  margin: 24px 0 0 220px;
-  position: absolute;
-}
-
-.myacct-name {
-  float: left;
-}
-
-.myacct-logout-button {
-  float: left;
-  margin: 36px 0 0 0;
-}
-
-.myacct-discoveryhead {
-  margin: 0 auto;
-  width: 1170px;
-  height: 100px;
-}
-
-.profile-image-myacct {
-  width: 200px;
-  height: 200px;
-  float: left;
-}
-
-.login-buttons {
-  text-align: center;
-}
-
-.login-buttons {
-  margin: 20px;
-}
-
-.num-discoveries {
-  float: left;
-  margin: 130px 0 0 20px
-}
-
-.user-discoveries-table {
-  padding:0px;
-  margin: 36px auto;
-  width: 1176px;
-  clear: both;
-}
-
-.user-discoveries-table thead {
-  background-color:$default;
-}
-
-.user-discoveries-table th {
-  color:$white;
-  font-family:'Roboto';
-  font-size:'20px';
-  font-weight:600;
-}
-
-/* Glossary layout */
-.glossary-paper {
-  margin: 0 15% 0 15%;
-}
-
-.glossary-item {
-  margin: 0 15% 0 15%;
-  text-align: "justify";
-  font-family: 'Roboto', sans-serif;
-  font-size: 1.1em;
-}
-
-.glossary-term {
-  padding: 0 0 0 15%;
-  text-align: "left";
-}
-
-/* Welcome layout */
-
-.welcome-container {
-  text-align: center;
-}
-
-.welcome-first {
-  width: 100%;
-  height: 600px;
-  background-image: url('/images/DNAsequencing_stockphoto_dark.jpg');
-  background-size: cover;
-}
-
-.welcome-text {
-  color: $white;
-  padding: 36px;
-  margin: 0;
-}
-
-.welcome-title {
-  color: $white;
-  font-size: 4.5rem;
-  font-weight: 700;
-  padding: 90px 0 36px 0;
-  margin: 0;
-}
-
-.subscribe-form-label {
-  color: $white;
-  line-height: 150%;
-  font-family: Helvetica;
-  font-size: 16px;
-  margin-top: 48px;
-  font-weight: bold;
-}
-
-.subscribe-reqd {
-  color: #FEB28D;
-  font-size: 20px;
-}
-
-.subscribe-table {
-  width: 400px;
-  display: inline-block;
-  text-align: left;
-}
-
-.subscribe-input {
-  background: #fff;
-  height: 36px;
-  width: 100%;
-  border: 2px solid #d0d0d0 !important;
-  border-radius: 3px;
-  margin: 3px 0 12px 0;
-  overflow: hidden;
-}
-
-.subscribe-button {
-  background-color: #6369E0 !important;
-  color: $white;
-  font-size: 16px;
-  font-family: 'Helvetica', Arial, sans-serif;
-  height: 42px;
-  margin: 12px 5px 12px 0;
-  padding: 0 22px;
-  border: 0;
-  border-radius: 3px;
-}
-
-.welcome-features {
-  background-color: $white;
-  display: inline-block;
-  width: 100%;
-}
-
-.feature-block {
-  width: 300px;
-  margin: 25px 50px;
-  display: inline-block;
-  vertical-align: top;
-}
-
-.feature-block-title {
-  font-size: 42px;
-  font-weight: 600;
-  margin: 10px auto;
-}
-
-.feature-block-body {
-  font-size: 18px;
-}
-
-.welcome-how {
-  background-color: #54545A;
-  display: inline-block;
-  width: 100%;
-}
-
-.welcome-how-header {
-  color: $white;
-  margin: 36px;
-  font-size: 42px;
-  font-weight: 400;
-}
-
-.welcome-how-subheader {
-  color: $white;
-  margin: 10px 10%;
-}
-
-.welcome-how-graphic {
-  margin: 36px;
-  margin-top: 5px;
-  float: left;
-}
-
-.welcome-how-explainer {
-  margin: 36px;
-}
-
-.welcome-how-explain-header {
-  text-align: left;
-  color: $white;
-  margin: 36px;
-  font-size: 30px;
-  font-weight: 300;
-}
-
-.welcome-how-explain-body {
-  text-align: left;
-  color: $white;
-  margin: 0 10% 0 36px;
-  font-size: 18px;
-}
-
-.welcome-announce {
-  font-size: 2.6em;
-  margin-top: 50px;
-  font-weight: 500;
-}
-
-.welcome-enter {
-  font-size: 1.1em;
-  text-align: center;
-}
-
-.welcome-cta {
-  width: 150px;
-  height: 60px;
-  margin: 0 auto;
-  padding-top: 10px;
-}
-
-.welcome-signup-submit {
-  text-align: center;
-  margin: 12px auto 25px;
-  width: 400px;
-  padding: 5px;
-}
-
-.welcome-email-field {
-  display: block;
-  margin: 0 auto;
-}
-
-.welcome-footer {
-  padding: 16px;
 }
 
 /*browse discoveries styles */
