--- a/client/css/explore.scss
+++ b/client/css/explore.scss
@@ -341,3 +341,92 @@
   padding-left: 12px;
   padding-right: 12px;
 }
+
+
+.range-slider {
+  margin-top: 15px;
+  width: 96%;
+  margin-left: 2%;
+}
+
+.range-slider-with-text {
+  width: 100%;
+  height: 30px;
+  position: relative;
+}
+
+.range-slider-with-text-left {
+  float: left;
+  display: flex;
+  width: 10%;
+  margin-right: 4%;
+}
+
+.range-slider-with-text-center {
+  float: left;
+  width: 71%;
+  margin-top: 20px;
+}
+
+.range-slider-with-text-right {
+  float: right;
+  display: flex;
+  width: 10%;
+  margin-left: 5%;
+}
+
+
+.chips {
+  min-height: 36px;
+  border-bottom: 1px solid rgb(224, 224, 224);
+  line-height: 1;
+  font-size: 1em;
+}
+
+.chips-input {
+  display: inline-block;
+  width: 33% !important;
+  min-height: 36px;
+  margin: 0 0 5px 10px !important;
+  border: 0;
+  outline: none;
+  font-size: 0.9rem;
+  border-bottom: none !important;
+  box-shadow: none !important;
+}
+
+.chip {
+  display: inline-block;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 5px;
+  margin-right: 25px;
+  position: relative;
+  padding: 0;
+  height: 32px;
+}
+
+.chip .chip-value {
+  display: inline-block;
+  padding-left: 15px;
+  padding-right: 7.5px;
+  background: #555;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 15px 0 0 15px;
+}
+
+.chip .chip-delete-button {
+  background: #555;
+  color: #fff;
+  border: 0;
+  border-radius: 0 15px 15px 0;
+  padding: 5px 10px;
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: -25px;
+  line-height: 0.5;
+  font-weight: bold;
+}
