--- a/client/css/welcome.scss
+++ b/client/css/welcome.scss
@@ -7,7 +7,7 @@
 .welcome-first {
   width: 100%;
   height: 600px;
-  background-image: url('/images/DNAsequencing_stockphoto_dark.jpg');
+  background-image: url('/images/welcome-hero.jpg');
   background-size: cover;
 }
 
@@ -28,14 +28,14 @@
 .subscribe-form-label {
   color: $white;
   line-height: 150%;
-  font-family: Helvetica;
+  font-family: 'Roboto';
   font-size: 16px;
   margin-top: 48px;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 .subscribe-reqd {
-  color: #FEB28D;
+  color: $accent;
   font-size: 20px;
 }
 
@@ -49,17 +49,17 @@
   background: #fff;
   height: 36px;
   width: 100%;
-  border: 2px solid #d0d0d0 !important;
+  border: 2px solid $cloud2 !important;
   border-radius: 3px;
   margin: 3px 0 12px 0;
   overflow: hidden;
 }
 
 .subscribe-button {
-  background-color: #6369E0 !important;
+  background-color: $default !important;
   color: $white;
   font-size: 16px;
-  font-family: 'Helvetica', Arial, sans-serif;
+  font-family: 'Roboto', Arial, sans-serif;
   height: 42px;
   margin: 12px 5px 12px 0;
   padding: 0 22px;
@@ -91,7 +91,7 @@
 }
 
 .welcome-how {
-  background-color: #54545A;
+  background-color: $cloud10;
   display: inline-block;
   width: 100%;
 }
