Browse Discoveries cleaned up

--- a/client/css/browse.scss
+++ b/client/css/browse.scss
@@ -17,12 +17,5 @@
 }
 
 .browse-discoveries-table thead {
-  background-color:$default;
-}
-
-.browse-discoveries-table th {
-  color:$white;
-  font-family:'Roboto';
-  font-size:'20px';
-  font-weight:600;
+  background-color:$accent;
 }
