adjust colors in viz dashboard to new palette

--- a/client/css/colors.scss
+++ b/client/css/colors.scss
@@ -1,12 +1,12 @@
 /* Jungle from http://design.vitalsource.com/ */
-$default: #1a9c6e;
-$dark: #12694a;
-$light: #1fb380;
+$default: #1fb380;
+$dark: #16825c;
+$light: #24c991;
 $lighter: #55d5a9;
 $lightest: #86e0c2;
 
 /* Magic from http://design.vitalsource.com/ */
-$accent: #425ba1;
+$accent: #516dbb;
 $accentDark: #24386e;
 $accentLight: #D2D9ED;
 
