more color adjustments

--- a/client/css/colors.scss
+++ b/client/css/colors.scss
@@ -1,13 +1,13 @@
 /* Jungle from http://design.vitalsource.com/ */
-$default: #1fb380;
+$default: #1A9C6E;
 $dark: #16825c;
-$light: #24c991;
+$light: #1fb380;
 $lighter: #55d5a9;
 $lightest: #86e0c2;
 
 /* Magic from http://design.vitalsource.com/ */
-$accent: #516dbb;
-$accentDark: #24386e;
+$accent: #425BA1;
+$accentDark: #334A88;
 $accentLight: #D2D9ED;
 
 /* Greys */
