--- a/client/css/discovery.scss
+++ b/client/css/discovery.scss
@@ -20,6 +20,10 @@
   overflow: visible;
 }
 
+.discovery-filterparam-table-header {
+  background-color: $accent;
+}
+
 .filterparam-table {
   margin: 10px 18px 12px 18px;
   overflow: visible;
