adjust filter bar colors

--- a/client/css/colors.scss
+++ b/client/css/colors.scss
@@ -8,7 +8,8 @@ $lightest: #86e0c2;
 /* Magic from http://design.vitalsource.com/ */
 $accent: #425BA1;
 $accentDark: #334A88;
-$accentLight: #D2D9ED;
+$accentMedium: #7188C7;
+$accentLight: #F2F4F9;
 
 /* Greys */
 $cloud1  : #FAFAFA;
