--- a/client/css/explore.scss
+++ b/client/css/explore.scss
@@ -202,6 +202,10 @@
   float: left;
 }
 
+.collapsible-container {
+  background: $accentLight;
+}
+
 .explore-headline {
   margin: 0 0 18px 18px;
   position: relative;
