--- a/client/css/rc-overrides.scss
+++ b/client/css/rc-overrides.scss
@@ -296,6 +296,7 @@
   left: -9999px;
   top: -9999px;
   visibility: visible;
+  z-index: 1400;
   box-sizing: border-box;
   -webkit-tap-highlight-color: $cloud7;
 }
@@ -319,12 +320,15 @@
   height: 24px;
   font-size: 12px;
   line-height: 1;
-  color: #fff;
+  color: $accent;
   text-align: center;
   text-decoration: none;
-  background-color: $cloud4;
-  border-radius: 6px;
-  box-shadow: 0 0 4px $cloud6;
+  background-color: $cloud1;
+  border-color: $accentMedium;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 4px;
+  box-shadow: 0 0 4px transparent;
 }
 
 .rc-slider-tooltip-arrow {
@@ -340,7 +344,7 @@
   left: 50%;
   margin-left: -4px;
   border-width: 4px 4px 0;
-  border-top-color: $cloud7;
+  border-top-color: $accentMedium;
 }
 
 
@@ -372,7 +376,7 @@
 
 .Select-control {
   background-color: #fff;
-  border-color: $cloud5 $cloud4 $cloud7;
+  border-color: $cloud5;
   border-radius: 4px;
   border: 1px solid $cloud4;
   color: $cloud10;
@@ -388,7 +392,7 @@
 }
 
 .Select-control:hover {
-  box-shadow: 0 1px 0 $cloud7;
+  box-shadow: 0 1px 0 $cloud5;
 }
 
 .Select-control .Select-input:focus {
@@ -402,8 +406,8 @@
 .is-open>.Select-control {
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
-  background: #fff;
-  border-color: $cloud7 $cloud4 $cloud5;
+  background: $white;
+  border-color: $cloud5;
 }
 
 .is-open>.Select-control .Select-arrow {
@@ -418,7 +422,7 @@
 
 .is-focused:not(.is-open)>.Select-control {
   border-color: $accentLight;
-  box-shadow: inset 0 1px 1px $cloud8, 0 0 0 3px $accent;
+  box-shadow: inset 0 1px 1px $cloud6, 0 0 0 2px $accentMedium;
 }
 
 .Select-placeholder, .Select--single>.Select-control .Select-value {
@@ -507,7 +511,7 @@
   box-sizing: border-box;
   border-radius: 50%;
   border: 2px solid $cloud3;
-  border-right-color: #333;
+  border-right-color: $cloud8;
   display: inline-block;
   position: relative;
   vertical-align: middle;
@@ -517,7 +521,7 @@
   -webkit-animation: Select-animation-fadeIn 200ms;
   -o-animation: Select-animation-fadeIn 200ms;
   animation: Select-animation-fadeIn 200ms;
-  color: $cloud5;
+  color: $cloud3;
   cursor: pointer;
   display: table-cell;
   position: relative;
@@ -599,10 +603,10 @@
 .Select-menu-outer {
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
-  background-color: #fff;
+  background-color: $white;
   border: 1px solid $cloud5;
   border-top-color: $cloud4;
-  box-shadow: 0 1px 0 $cloud8;
+  box-shadow: 0 1px 0 $cloud5;
   box-sizing: border-box;
   margin-top: -1px;
   max-height: 200px;
@@ -620,7 +624,7 @@
 
 .Select-option {
   box-sizing: border-box;
-  background-color: #fff;
+  background-color: $white;
   color: $cloud7;
   cursor: pointer;
   display: block;
@@ -635,15 +639,15 @@
 .Select-option.is-selected {
   background-color: $accentLight;
   /* Fallback color for IE 8 */
-  background-color: $cloud7;
+  background-color: $accentLight;
   color: $cloud10;
 }
 
 .Select-option.is-focused {
   background-color: $accentLight;
   /* Fallback color for IE 8 */
-  background-color: $cloud6;
-  color: #333;
+  background-color: $cloud4;
+  color: $cloud10;
 }
 
 .Select-option.is-disabled {
@@ -672,12 +676,12 @@
 .Select--multi .Select-value {
   background-color: $accentLight;
   /* Fallback color for IE 8 */
-  background-color: $cloud4;
-  border-radius: 2px;
-  border: 1px solid $accent;
+  background-color: $accentLight;
+  border-radius: 3px;
+  border: 1px solid $accentMedium;
   /* Fallback color for IE 8 */
-  border: 1px solid $accent;
-  color: $accentDark;
+  border: 1px solid $accentMedium;
+  color: $accent;
   display: inline-block;
   font-size: 0.9em;
   line-height: 1.4;
@@ -721,14 +725,14 @@
 .Select--multi .Select-value-icon:hover, .Select--multi .Select-value-icon:focus {
   background-color: $accentLight;
   /* Fallback color for IE 8 */
-  background-color: $cloud10;
+  background-color: $accentLight;
   color: $accent;
 }
 
 .Select--multi .Select-value-icon:active {
   background-color: $accentLight;
   /* Fallback color for IE 8 */
-  background-color: $cloud10;
+  background-color: $accentLight;
 }
 
 .Select--multi.is-disabled .Select-value {
