--- a/client/css/explore.scss
+++ b/client/css/explore.scss
@@ -138,6 +138,12 @@
   width: 200px;
   white-space: normal;
   text-align: left;
+  color: $accent;
+  background-color: $white;
+  border-color: $accent;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 3px;
 }
 
 .figure-hint-label {
