--- a/client/css/my-account.scss
+++ b/client/css/my-account.scss
@@ -20,6 +20,12 @@
 
 .myacct-name {
   margin-top: .5rem;
+  font-size: 2.2em;
+  text-align: left;
+}
+
+.myacct-user-discoveries {
+  text-align: left;
 }
 
 .myacct-logout-button {
