Bunch of cleanup
* Browse page is “done” (responsive and cleaned up)
* Added “Created By” names to browse
* My Account is “done” (responsive and cleaned up), both when signed in
and when signed out
* Fixed button offset in header
* Color cleanup (in styles, favicon and new image for “how it works”
diagram)

--- a/client/css/browse.scss
+++ b/client/css/browse.scss
@@ -2,20 +2,31 @@
 
 /*browse discoveries styles */
 .browse-discoveries-header {
-  text-align: left;
   margin: 36px auto 18px auto;
-  width: 1176px;
+  width:85%;
+  max-width:1176px;
   font-weight: 400;
-  font-size: 36px;
-  color: #4A4A50;
+  font-size: 30px;
 }
 
 .browse-discoveries-table {
   padding:0px;
   margin: auto;
-  width: 1176px;
+  width:85%;
+  max-width:1176px;
 }
 
 .browse-discoveries-table thead {
   background-color:$accent;
+}
+
+@media (max-width: 500px) {
+  .browse-discoveries-header {
+    width: 95%;
+    font-size:24px;
+  }
+
+  .browse-discoveries-table {
+    width: 95%;
+  }
 }
