--- a/client/css/explore.scss
+++ b/client/css/explore.scss
@@ -154,6 +154,11 @@
   grid-template-rows: 400px 400px 563px;
 }
 
+.explore-filter {
+  margin: 12px 0 0 12px;
+  grid-area: 1 / 1 / span 3 / span 1;
+}
+
 .explore-headline {
   grid-area: 1 / 1 / span 1 / span 10;
 }
@@ -212,6 +217,12 @@
   overflow-y:scroll;
 }
 
+.explore-table {
+  padding:0px;
+  grid-area: 7 / 3 / span 1 / span 6;
+  margin-bottom: 48px;
+}
+
 .explore-map-contents {
   position: absolute;
   margin: 0 0 0 0;
@@ -223,16 +234,6 @@
 
 .explore-map-render {
   margin: 0 0 0 0;
-}
-
-.explore-table {
-  padding:0px;
-  grid-area: 7 / 3 / span 1 / span 6;
-}
-
-.explore-filter {
-  margin: 12px 0 0 12px;
-  grid-area: 1 / 1 / span 3 / span 1;
 }
 
 .explore-filter-slider {
@@ -404,4 +405,81 @@
   right: -25px;
   line-height: 0.5;
   font-weight: bold;
+}
+
+/* 1496 is min normal view with 6 main columns */
+@media (max-width: 1496px) {
+  .explore-container {
+    width: 100%;
+    margin: 0 auto;
+    display:grid;
+    grid-template-columns: 340px 1fr 10fr 10fr 10fr 10fr 1fr 0px;
+    grid-template-rows: 48px 68px 250px auto auto auto auto 1fr;
+    grid-gap: 18px 18px;
+  }
+
+  .explore-child-grid {
+    grid-area: 4 / 3 / span 4 / span 4;
+    display: inherit;
+    grid-gap: 18px 18px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto auto;
+  }
+
+  .explore-headline {
+    grid-area: 1 / 1 / span 1 / span 8;
+  }
+
+  .save-discovery-button-container {
+    grid-area: 2 / 1 / span 1 / span 8;
+  }
+
+  .explore-number-datasets {
+    grid-area: 3 / 3 / span 1 / span 2;
+  }
+
+  .explore-total-download {
+    display:none;
+  }
+
+  .explore-user {
+    grid-area: 3 / 5 / span 1 / span 2;
+  }
+
+  .explore-general {
+    grid-area: 1 / 3 / span 1 / span 2;
+  }
+
+  .explore-sequencing {
+    grid-area: 2 / 1 / span 1 / span 4;
+  }
+
+  .explore-pie {
+    grid-area: 1 / 1 / span 1 / span 2;
+  }
+
+  .explore-sequencing-hist {
+    grid-area: 3 / 1 / span 1 / span 4;
+  }
+
+  .explore-map {
+    grid-area: 4 / 1 / span 1 / span 4;
+  }
+
+  .explore-wordcloud {
+    grid-area: 3 / 2 /span 1 /span 2;
+    display:none;
+  }
+
+  .explore-table {
+    grid-area: 8 / 3 / span 1 / span 4;
+  }
+}
+
+@media (max-width: 1028px) {
+
+}
+
+@media (max-width: 769px) {
+
 }
