--- a/client/css/explore.scss
+++ b/client/css/explore.scss
@@ -160,11 +160,11 @@
 }
 
 .explore-headline {
-  grid-area: 1 / 1 / span 1 / span 10;
+  grid-area: 1 / 3 / span 1 / span 6;
 }
 
 .save-discovery-button-container {
-  grid-area: 2 / 1 / span 1 / span 10;
+  grid-area: 2 / 3 / span 1 / span 6;
 }
 
 .explore-number-datasets {
@@ -427,11 +427,11 @@
   }
 
   .explore-headline {
-    grid-area: 1 / 1 / span 1 / span 8;
+    grid-area: 1 / 3 / span 1 / span 4;
   }
 
   .save-discovery-button-container {
-    grid-area: 2 / 1 / span 1 / span 8;
+    grid-area: 2 / 3 / span 1 / span 4;
   }
 
   .explore-number-datasets {
@@ -446,16 +446,16 @@
     grid-area: 3 / 5 / span 1 / span 2;
   }
 
+  .explore-pie {
+    grid-area: 1 / 1 / span 1 / span 2;
+  }
+
   .explore-general {
     grid-area: 1 / 3 / span 1 / span 2;
   }
 
   .explore-sequencing {
     grid-area: 2 / 1 / span 1 / span 4;
-  }
-
-  .explore-pie {
-    grid-area: 1 / 1 / span 1 / span 2;
   }
 
   .explore-sequencing-hist {
@@ -476,8 +476,129 @@
   }
 }
 
-@media (max-width: 1028px) {
+@media (max-width: 1180px) {
+  .explore-container {
+    grid-template-columns: 340px 1fr 10fr 10fr 10fr 10fr 1fr 0px;
+    grid-template-rows: 48px 68px 250px auto auto auto auto auto 1fr;
+  }
 
+  .explore-child-grid {
+    grid-area: 4 / 3 / span 5 / span 4;
+    display: inherit;
+    grid-gap: 18px 18px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto auto auto;
+  }
+  .explore-number-datasets {
+    grid-area: 3 / 3 / span 1 / span 2;
+  }
+
+  .overview-content .active {
+    font-size: 22px;
+  }
+
+  .explore-total-download {
+    display:block;
+    grid-area: 4 / 3 / span 1 / span 2;
+  }
+
+  .explore-user {
+    grid-area: 3 / 5 / span 1 / span 2;
+  }
+
+  .explore-pie {
+    grid-area: 1 / 3 / span 1 / span 2;
+  }
+
+  .explore-general {
+    grid-area: 2 / 1 / span 1 / span 4;
+  }
+
+  .explore-sequencing {
+    grid-area: 3 / 1 / span 1 / span 4;
+  }
+
+  .explore-sequencing-hist {
+    grid-area: 4 / 1 / span 1 / span 4;
+  }
+
+  .explore-map {
+    grid-area: 5 / 1 / span 1 / span 4;
+  }
+
+  .explore-wordcloud {
+    grid-area: 3 / 2 /span 1 /span 2;
+    display:none;
+  }
+
+  .explore-table {
+    grid-area: 9 / 3 / span 1 / span 4;
+  }
+}
+
+@media (max-width: 1080px) {
+  .explore-container {
+    grid-template-columns: 0px 1fr 10fr 10fr 10fr 10fr 1fr 0px;
+    grid-template-rows: 48px 68px auto 250px auto auto auto auto auto 1fr;
+  }
+
+  .explore-child-grid {
+    grid-area: 5 / 3 / span 4 / span 4;
+  }
+
+  .explore-filter {
+    margin-top:0px;
+    grid-area: 3 / 3 / span 1 / span 4;
+  }
+
+  .explore-headline {
+    grid-area: 1 / 3 / span 1 / span 4;
+  }
+
+  .save-discovery-button-container {
+    grid-area: 2 / 3 / span 1 / span 4;
+  }
+
+  .explore-number-datasets {
+    grid-area: 4 / 3 / span 1 / span 2;
+  }
+
+  .explore-total-download {
+    grid-area: 5 / 3 / span 1 / span 2;
+  }
+
+  .explore-user {
+    grid-area: 4 / 5 / span 1 / span 2;
+  }
+
+  .explore-pie {
+    grid-area: 1 / 3 / span 1 / span 2;
+  }
+
+  .explore-general {
+    grid-area: 2 / 1 / span 1 / span 4;
+  }
+
+  .explore-sequencing {
+    grid-area: 3 / 1 / span 1 / span 4;
+  }
+
+  .explore-sequencing-hist {
+    grid-area: 4 / 1 / span 1 / span 4;
+  }
+
+  .explore-map {
+    grid-area: 5 / 1 / span 1 / span 4;
+  }
+
+  .explore-wordcloud {
+    grid-area: 3 / 2 /span 1 /span 2;
+    display:none;
+  }
+
+  .explore-table {
+    grid-area: 9 / 3 / span 1 / span 4;
+  }
 }
 
 @media (max-width: 769px) {
